--- a/src/app/theme/styles/main.css
+++ b/src/app/theme/styles/main.css
@@ -5,6 +5,8 @@ body {
     font-family: poppins, Arial, Helvetica, sans-serif;
     color: var(--primary);
     font-size: 1.2rem;
+    margin: 0;
+    padding: 0;
 }
 
 button {
@@ -28,103 +30,7 @@ a {
     font-weight: 500;
 }
 
+span {
+    color: var(--danger);
 
-.card {
-    background-color: var(--accent);
-    color: var(--primary);
-    border-radius: 10px;
-    padding: 1rem;
-    margin: 1rem;
-}
-
-.card:hover {
-    background-color: var(--accentHover);
-    color: var(--primary);
-    border-radius: 10px;
-    padding: 1rem;
-    margin: 1rem;
-}
-
-.mt {
-    margin-top: var(--gutter);
-}
-
-.mb {
-    margin-bottom: var(--gutter);
-}
-
-.mr {
-    margin-right: var(--gutter);
-}
-
-.ml {
-    margin-left: var(--gutter);
-}
-
-.m {
-    margin: var(--gutter);
-}
-
-.p {
-    padding: var(--gutter);
-}
-
-.pt {
-    padding-top: var(--gutter);
-}
-
-.pb {
-    padding-bottom: var(--gutter);
-}
-
-.pr {
-    padding-right: var(--gutter);
-}
-
-.pl {
-    padding-left: var(--gutter);
-}
-
-.flex {
-    display: flex;
-}
-
-.flex-col {
-    display: flex;
-    flex-direction: column;
-}
-
-.flex-row {
-    display: flex;
-    flex-direction: row;
-}
-
-.flex-wrap {
-    flex-wrap: wrap;
-}
-
-.flex-nowrap {
-    flex-wrap: nowrap;
-}
-
-.flex-1 {
-    flex: 1;
-}
-
-.width-100 {
-    width: 100%;
-}
-
-.width-50 {
-    width: 50%;
-}
-
-.center {
-    margin: auto;
-    text-align: center;
-}
-
-.spacer {
-    flex: 1;
-    height: var(--gutter);
 }
