--- a/src/app/theme/styles/custom.css
+++ b/src/app/theme/styles/custom.css
@@ -44,6 +44,15 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1;
+}
+
+.content {
+    padding-top: 100px;
 }
 
 .icon {
