--- a/src/app/theme/styles/custom.css
+++ b/src/app/theme/styles/custom.css
@@ -327,41 +327,33 @@
 
 
 .modal {
-    display: none;
-    /* Hidden by default */
     position: fixed;
-    /* Stay in place */
     z-index: 1;
-    /* Sit on top */
     left: 0;
     top: 0;
     width: 100%;
-    /* Full width */
     height: 100%;
-    /* Full height */
     overflow: auto;
-    /* Enable scroll if needed */
-    background-color: rgb(0, 0, 0);
-    /* Fallback color */
-    background-color: rgba(0, 0, 0, 0.4);
-    /* Black w/ opacity */
+    background-color: var(--primary);
+    background-color: var(--navBg);
     display: block;
+
 }
 
 /* Modal Content/Box */
 .modal-content {
-    background-color: #fefefe;
+    background-color: var(--navBg);
     margin: 15% auto;
     /* 15% from the top and centered */
     padding: 20px;
-    border: 1px solid #888;
+    border: 1px solid var(--primary);
     width: 80%;
     /* Could be more or less, depending on screen size */
 }
 
 /* The Close Button */
 .close {
-    color: #aaa;
+    color: var(--danger);
     float: right;
     font-size: 28px;
     font-weight: bold;
@@ -369,7 +361,7 @@
 
 .close:hover,
 .close:focus {
-    color: black;
+    color: var(--danger);
     text-decoration: none;
     cursor: pointer;
 }
