--- a/src/app/theme/styles/main.css
+++ b/src/app/theme/styles/main.css
@@ -1,4 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,500;0,600;0,800;0,900;1,100;1,200;1,500;1,900&display=swap');
+@import "https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css";
+
+
+
 
 body {
     background-color: var(--bg);
