--- a/src/app/theme/styles/custom.css
+++ b/src/app/theme/styles/custom.css
@@ -24,18 +24,13 @@
 }
 
 .logo {
-    width: 50px;
-    height: 50px;
+    width: 100%;
+    height: 60px;
     color: var(--primary);
+    cursor: pointer;
+    background-color: #fff;
 }
 
-.logo:hover {
-    width: 51px;
-    height: 51px;
-    color: var(--danger);
-    transition: 0.3s;
-    cursor: pointer;
-}
 
 .navbar {
     background-color: var(--navBg);
