--- a/src/app/theme/styles/custom.css
+++ b/src/app/theme/styles/custom.css
@@ -1,3 +1,25 @@
+.content {
+    background-image: var(--bgImage);
+    height: 100%;
+    width: 100%;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+
+.full-height {
+    height: 100vh;
+}
+
+.content-inner {
+    padding-top: 100px;
+    background: var(--bgOverlay);
+    height: 100%;
+    width: 100%;
+}
+
+
 .card {
     background-color: var(--accent);
     color: var(--primary);
@@ -46,9 +68,6 @@
     z-index: 1;
 }
 
-.content {
-    padding-top: 100px;
-}
 
 .icon {
     color: var(--primary);
