--- a/src/app/theme/styles/custom.css
+++ b/src/app/theme/styles/custom.css
@@ -233,6 +233,14 @@
     .width-50 {
         width: 90%;
     }
+
+    .logo {
+        width: 100%;
+        height: 40px;
+        color: var(--primary);
+        cursor: pointer;
+        background-color: #fff;
+    }
 }
 
 
