--- a/src/app/theme/styles/custom.css
+++ b/src/app/theme/styles/custom.css
@@ -46,7 +46,7 @@
 }
 
 .logo {
-    width: 100%;
+    width: 150px;
     height: 60px;
     color: var(--primary);
     cursor: pointer;
@@ -235,7 +235,7 @@
     }
 
     .logo {
-        width: 100%;
+        width: 100px;
         height: 40px;
         color: var(--primary);
         cursor: pointer;
